# currency-converter-chat-app

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  setup.sh
app/: __init__.py  main.py  routes.py
app/modules/: __init__.py  currency_service.py  gemini_client.py  utils.py
app/static/css/: main.css  rtl.css
app/static/js/: chat.js  utils.js
app/templates/: error.html  index.html
